# BOR-qtgroundstation-mac-19

./: .gitignore  CMakeLists.txt  RoverCommunicator.cpp  RoverCommunicator.h  WindowWorker.cpp  WindowWorker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Serial/: CMakeLists.txt  SerialPort.cpp  SerialPort.h  SerialScanner.cpp  SerialScanner.h
